Fix: Update main entry point to use complete app.js
- Renamed app-new.js to app.js (contains all latest features)
- Moved old app.js to app-old-backup.js
- Updated package.json to use correct entry point
- Updated README.md with correct startup instructions
- Added IMPORTANT_SETUP.md to help users avoid 404 errors

This fixes the issue where users cloning from GitHub would get 404 errors
on Receiving Management, Supplier/Customer Management, and Inventory Reports
because they were running the old app-prototype.js instead of the complete version.

Files:
- app.js (93KB) - Main application with all features
- app-prototype.js (48KB) - Old prototype version
- app-old-backup.js (6KB) - Very old backup

Users should now run: npm start or node app.js

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "一个基于Node.js和MongoDB的3C类产品销售库存管理系统，支持产品管理、库存跟踪、销售记录和供应商管理。",
   "main": "app.js",
   "scripts": {
-    "start": "node app-prototype.js",
-    "start-old": "node app.js",
+    "start": "node app.js",
+    "start-old": "node app-old-backup.js",
     "start-simple": "node app-simple.js",
     "prototype": "node app-prototype.js",
     "seed": "node scripts/seed-data.js",
